[gd_scene load_steps=2 format=3 uid="uid://nfovaej77qpq"]

[ext_resource type="Script" path="res://GameManager/startMenu.gd" id="1_qx233"]

[node name="startMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qx233")

[node name="backgroundColour" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.278431, 0.431373, 0.776471, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="gameName" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Game"

[node name="new" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="load" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="options" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Options"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/new" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
